--- a/src/app.html
+++ b/src/app.html
@@ -29,8 +29,8 @@
 		<!-- ISSUE WITH THE THREE JS LIBRARY R122 -->
 		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r122/three.min.js" integrity="sha512-bzjaf85dHTL4H0BvkAJ/Jbvxqf1rDj+jVpCNe3oxQj/RXSnkx1HnKhqIcmMWghxEAbXsYgddrc38saWpltlkug==" crossorigin="anonymous"></script> -->
 		<!-- <script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script> -->
-		<script src="https://threejs.org/build/three.js"></script>
-		<script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
+		<!-- <script src="https://threejs.org/build/three.js"></script> -->
+		<!-- <script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script> -->
 		<!-- <script src="https://s3-eu-west-2.amazonaws.com/bckld/lab/loading.js"></script> -->
 
 		%svelte.head%
