--- a/src/app.html
+++ b/src/app.html
@@ -13,6 +13,9 @@
 		<!-- <link rel="icon" type="image/png" href="assets/img/favicon/72x72.png" sizes="72x72"> -->
 		<!-- <link rel="apple-touch-icon" href="assets/img/favicon/114x114.png" sizes="114x114"> -->
 
+    <script data-goatcounter="https://starbased.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
+
 		<!-- 
 		Website Fonts -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
