--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,9 @@
 		<!-- user-scalable=no -->
 		<meta name="theme-color" content="#E3E3E3">
 
+    <script data-goatcounter="https://starbased-main.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
+
 		<!-- 
 		Website Icons & Favicons -->
 		<link rel="icon" type="image/png" href="assets/img/favicon/48x48.png" sizes="48x48">
